<resources>
    <string name="app_name">DGU</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_search">Search</string>
    <string name="nav_shoppingList">Shopping List</string>
    <string name="nav_settings">Settings</string>
    <string name="user_preferences">USER PREFERENCES</string>
    <string name="calorie_range">Calorie Range</string>
    <string name="diet_labels">Diet Label</string>
    <string name="health_labels">Health Labels</string>
    <string name="time_range">Max Time</string>
    <string name="low_carb">Low-Carb</string>
    <string name="low_fat">Low-Fat</string>
    <string name="high_protein">High-Protein</string>
    <string name="low_sodium">Low-Sodium</string>
    <string name="high_fiber">High-Fiber</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="paleo">Paleo</string>
    <string name="pescatarian">Pescatarian</string>
    <string name="dairy_free">Dairy-Free</string>
    <string name="kosher">Kosher</string>
    <string name="shellfish_free">Shellfish-Free</string>
    <string name="peanut_free">Peanut-Free</string>
    <string name="tree_nut_free">Tree Nut-Free</string>
    <string name="egg_free">Egg-Free</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="height_in_inches">Height in inches</string>
    <string name="weight_in_pounds">Weight in pounds</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="favorited_meals">Favorited Meals</string>
    <string name="upcoming_meals">Upcoming Scheduled Meals</string>
    <string name="today_s_calories">Today\'s Calories:</string>
    <string name="macros_g_c">Macros (g) C:</string>
    <string name="p">&#160;&#160;P:</string>
    <string name="f">&#160;&#160;F:</string>
    <string name="history">Meal History</string>
    <string name="date">DATE</string>
    <string name="name">NAME</string>
    <string name="e_mail">E-mail:</string>
    <string name="password1">Password:</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="meal_name">MEAL NAME</string>
    <string name="macros">Macros</string>
    <string name="carbs">Carbs:&#160;</string>
    <string name="g_protein">g Protein:&#160;</string>
    <string name="g_fat">g Fat:&#160;</string>
    <string name="g">g</string>
    <string name="ingredients">Ingredients</string>
    <string name="link_to_instructions">Link to Instructions</string>
    <string name="gluten_free">Gluten-Free</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="space2x" />
    <string name="search_terms">Search terms</string>
    <string name="search">Search</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="in_minutes">in minutes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="search_filters">SEARCH FILTERS</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="search_meal_name_here">SEARCH MEAL NAME HERE</string>
    <string name="none">None</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="user_preferences1">User Preferences</string>
    <string name="logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Favorites</item>
        <item>Search</item>
        <item>Shopping List</item>
        <item>Settings</item>
    </string-array>
</resources>
