<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navI_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/navI_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/navI_favorites"
            android:icon="@drawable/ic_favorite_no"
            android:title="@string/favorites" />
        <item
            android:id="@+id/navI_shopping"
            android:icon="@drawable/ic_shoppinglist"
            android:title="@string/shopping_list"/>
        <item
            android:id="@+id/navI_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/user_preferences1" />
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/logout" />
    </group>

</menu>
