<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/sfTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/search_filters"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sfTvCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sfTvTitle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/calorie_range"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfTvTitle" />

        <EditText
            android:id="@+id/sfCalorieLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/low"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="8dp"
            android:text=" to "
            app:layout_constraintEnd_toStartOf="@+id/sfCalorieHigh"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sfCalorieHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/high"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sfTvTimeRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/time_range"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfTvCal" />

        <EditText
            android:id="@+id/sfTimeHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="92dp"
            android:hint="@string/in_minutes"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfCalorieLow" />

        <TextView
            android:id="@+id/sfTvDietLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/diet_labels"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfTvTimeRange" />

        <RadioGroup
            android:id="@+id/sfRadioDietLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sfTvDietLabels">

            <RadioButton
                android:id="@+id/sfSettingsNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/sfSettingsLowCarb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_carb" />

            <RadioButton
                android:id="@+id/sfSettingsLowFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_fat" />

            <RadioButton
                android:id="@+id/sfSettingsHighProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_protein" />

            <RadioButton
                android:id="@+id/sfSettingsHighFiber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_fiber" />

            <RadioButton
                android:id="@+id/sfSettingsLowSodium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_sodium" />

        </RadioGroup>

        <TextView
            android:id="@+id/sfHealthLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/health_labels"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfRadioDietLabels" />

        <CheckBox
            android:id="@+id/sfCheckboxVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/vegetarian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfHealthLabels" />

        <CheckBox
            android:id="@+id/sfCheckboxVegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/vegan"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/sfHealthLabels" />

        <CheckBox
            android:id="@+id/sfCheckboxKosher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/kosher"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxVegan" />

        <CheckBox
            android:id="@+id/sfCheckboxPaleo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/paleo"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxKosher" />

        <CheckBox
            android:id="@+id/sfCheckboxPescatarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/pescatarian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxVegetarian" />

        <CheckBox
            android:id="@+id/sfCheckboxGluten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/gluten_free"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxPescatarian" />

        <CheckBox
            android:id="@+id/sfCheckboxDairy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dairy_free"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxPaleo" />

        <CheckBox
            android:id="@+id/sfCheckboxShellfish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/shellfish_free"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxGluten" />

        <CheckBox
            android:id="@+id/sfCheckboxPeanut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/peanut_free"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxTreenut" />

        <CheckBox
            android:id="@+id/sfCheckboxTreenut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/tree_nut_free"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxShellfish" />

        <CheckBox
            android:id="@+id/sfCheckboxEgg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/egg_free"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/sfCheckboxDairy" />

        <Button
            android:id="@+id/sfButtonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="&lt; Save Filters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sfCheckboxPeanut"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="192dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>