<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ffffff">

    <ImageView

        android:layout_width="150dp"
        android:layout_height="150dp"

        android:background="@null"
        android:src="@drawable/main_logo"
        android:layout_gravity="center"

        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/inputFirstName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/inputHeight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/height_in_inches"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight_in_pounds"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail_address"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:weightSum="2"
        android:layout_marginLeft="35dp"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        >
        <RadioButton
            android:id="@+id/radioM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/radioF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:layout_weight="1"
            />
    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/register"
        android:background="@drawable/button_navy"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="15dp"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/back"
        android:background="@drawable/button_navy"
        />

</LinearLayout>

